--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Libre Forum</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/spritesheet.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="spritesheet.min.css">
 </head>
 <html>
     <body class="body">
